TP°N2/.metadata/.plugins/org.eclipse.cdt.ui/TP2.build.log
20:07:16 **** Incremental Build of configuration Debug for project TP2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionsimple.o" "..\\src\\funcionsimple.c" 
..\src\funcionsimple.c: In function 'OpeternerNombre':
..\src\funcionsimple.c:6:11: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'int' [-Wformat=]
  printf("%s",mensaje[tam]);
           ^
..\src\funcionsimple.c:7:10: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'eEmpleado {aka struct <anonymous>}' [-Wformat=]
  scanf("%s",dato);
          ^
..\src\funcionsimple.c: In function 'Salario':
..\src\funcionsimple.c:17:10: warning: format '%f' expects argument of type 'float *', but argument 2 has type 'double' [-Wformat=]
  scanf("%f", sueldo);
          ^
..\src\funcionsimple.c:17:2: warning: 'sueldo' is used uninitialized in this function [-Wuninitialized]
  scanf("%f", sueldo);
  ^~~~~~~~~~~~~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funciones.o" "..\\src\\funciones.c" 
..\src\funciones.c: In function 'DarDeAlta':
..\src\funciones.c:15:20: error: incompatible type for argument 1 of 'OpeternerNombre'
    OpeternerNombre(lista->nombre,"ingrese el nombre del empleado",50);
                    ^~~~~
In file included from ..\src\funciones.h:10:0,
                 from ..\src\funciones.c:1:
..\src\funcionsimple.h:15:6: note: expected 'eEmpleado {aka struct <anonymous>}' but argument is of type 'char *'
 void OpeternerNombre(eEmpleado dato,char mensaje[], int tam);
      ^~~~~~~~~~~~~~~

20:07:16 Build Failed. 1 errors, 4 warnings. (took 419ms)

